--- a/languages/cleora.pot
+++ b/languages/cleora.pot
@@ -2,14 +2,14 @@
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Cleora 1.3.1\n"
+"Project-Id-Version: Cleora 1.3.3\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/cleora\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-05-20T13:10:04+00:00\n"
+"POT-Creation-Date: 2022-05-25T12:16:21+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.6.0\n"
 "X-Domain: cleora\n"
@@ -66,7 +66,7 @@ msgstr ""
 
 #. translators: %s: WordPress.
 #: footer.php:45
-msgid "Made with ❤️ by developer of  %s."
+msgid "Made with ❤️ by developer of %s."
 msgstr ""
 
 #: footer.php:46
@@ -89,8 +89,12 @@ msgstr ""
 msgid "Add widgets here."
 msgstr ""
 
-#: header.php:27
-msgid "Skip to content"
+#: header.php:29
+msgid "Skip to the content"
+msgstr ""
+
+#: header.php:39
+msgid "Open"
 msgstr ""
 
 #: inc/block-patterns.php:13
